--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <!-- Path to images as from index.html file -->
       <img src="./img/javascript.svg" alt="" />
     </section>
-
+    <load ="partials/section1.html" />
     <!-- Loads the specified .html file -->
     <load ="partials/vite-promo.html" />
 
